--- a/AMTGBot/AMTGBot.csproj
+++ b/AMTGBot/AMTGBot.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="AngouriMath" Version="1.2.0-preview.4" />
     <PackageReference Include="CSharpMath.Rendering" Version="0.5.0-beta" />
     <PackageReference Include="CSharpMath.SkiaSharp" Version="0.5.0-beta" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="Telegram.Bot" Version="15.7.1" />
   </ItemGroup>
 
